# nag

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: config.rs  http.rs  main.rs  telegram.rs
src/agenda/: cron.rs  event.rs  mod.rs
src/agenda/time_parsing/: cronline_builder.rs  mod.rs  parsers.rs  tests.rs
