[package]
name = "nag"
version = "0.1.0"
authors = ["Robin Lange <robin.langenc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.4"
chrono = "0.4"
rayon = "1.5"
regex = "1.0"
